<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PassManager</string>
    <string name="action_settings">Settings</string>
    <string name="addUser">Add user</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">Confirm</string>
    <string name="copyName">Copy name</string>
    <string name="copyPassword">Copy password</string>
    <string name="deleteUser">Delete user</string>
    <string name="editUser">Edit user</string>
    <string name="introducePassword">Introduce password</string>
    <string name="logIn">Log in</string>
    <string name="min6lenth">The password must be at least 8 characters</string>
    <string name="openUrl">Open URL</string>
    <string name="password">Password</string>
    <string name="passwordCopiedClipboard">Password copied to clipboard</string>
    <string name="passwordNotNull">Password cannot be null</string>
    <string name="passwordsNotMatching">The passwords don\'t match</string>
    <string name="save">SAVE</string>
    <string name="service">Service</string>
    <string name="serviceNotNull">Service cannot be null</string>
    <string name="setUpPassword">Set up password</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_activity_menu_contextual">MenuContextualActivity</string>
    <string name="title_activity_set_pass_word">SetPassWordActivity</string>
    <string name="title_activity_validate_password">ValidatePasswordActivity</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="urlOptional">URL (optional)</string>
    <string name="user">User</string>
    <string name="userCopiedClipboard">User copied to clipboard</string>
    <string name="userName">User name</string>
    <string name="userNotNull">User cannot be null</string>
    <string name="username">User name</string>
    <string name="wrongPassword">Wrong password</string>
</resources>