<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="500dp"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="pruebas.manuel.passmanager.ViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:paddingBottom="10dp"
            android:scrollbars="none">

            <TextView
                android:id="@+id/textViewUserNameMenuContextual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/user"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/estructuraUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_service" />

        <TextView
            android:layout_width="15dp"
            android:layout_height="0dp" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/openUrl"
                android:textSize="20sp" />
        </HorizontalScrollView>

        <at.markushi.ui.CircleButton
            android:id="@+id/buttonOpenURLMenuContextual"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_action_url"
            app:cb_color="@color/ColorPrimary"
            app:cb_pressedRingWidth="8dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_user" />

        <TextView
            android:layout_width="15dp"
            android:layout_height="0dp" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/copyName"
                android:textSize="20sp" />

        </HorizontalScrollView>

        <at.markushi.ui.CircleButton
            android:id="@+id/buttonCopyUserMenuContextual"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_action_name"
            app:cb_color="@color/ColorPrimary"
            app:cb_pressedRingWidth="8dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_password" />

        <TextView
            android:layout_width="15dp"
            android:layout_height="0dp" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/copyPassword"
                android:textSize="20sp" />
        </HorizontalScrollView>

        <at.markushi.ui.CircleButton

            android:id="@+id/buttonCopyPasswordMenuContextual"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_action_name"
            app:cb_color="@color/ColorPrimary"
            app:cb_pressedRingWidth="8dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_edit" />

        <TextView
            android:layout_width="15dp"
            android:layout_height="0dp" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/editUser"
                android:textSize="20sp" />
        </HorizontalScrollView>

        <at.markushi.ui.CircleButton
            android:id="@+id/buttonEditMenuContextual"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_action_edit"
            app:cb_color="@color/ColorPrimary"
            app:cb_pressedRingWidth="8dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_delete" />

        <TextView
            android:layout_width="15dp"
            android:layout_height="0dp" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/deleteUser"
                android:textSize="20sp" />
        </HorizontalScrollView>

        <at.markushi.ui.CircleButton
            android:id="@+id/buttonDeleteMenuContextual"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_action_delete"
            app:cb_color="@color/ColorPrimary"
            app:cb_pressedRingWidth="8dip" />
    </LinearLayout>

</LinearLayout>
